--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 body {
     background-image: url("../images/bck1010101.jpg");
-    background-color: lavender;
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;
+    width: 1920px;
+    height: 1080px;
 }
