--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
     <h1 data-position="header">Occasion and Gift Tracker</h1>
 
     <section data-position="add-occasion-info">
-      <h2>Add Occasin Info</h2>
+      <h2>Add Occasion Info</h2>
       <p>Enter your occasion info.  Example:
-        Name, occaison, gift, and date gift provided.
+        Name, occasion, gift, and date gift provided.
       </p>
 
       <form action="/quotes" method="POST">
