--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
         <h2>Remove Occasion Info</h2>
         <p>Does nothing if there is no infromation to delete.</p>
         <form action="/" method="DELETE">
-        <input type="text" id="deletename" name="deletename" required/>
+        <input type="text" name="deletename" required/>
         <button id="delete-button">Delete</button>
       </form>
       </div>
