--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
         <p>Does nothing if there is no infromation to delete.</p>
         <form action="/" method="DELETE">
         <input type="text" name="deletename" required/>
-        <button id="delete-button">Delete</button>
+        <button type="submit">Delete</button>
       </form>
       </div>
       <div id="message"></div>
