--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
       <div>
         <h2>Remove Occasion Info</h2>
         <p>Does nothing if there is no infromation to delete.</p>
-        <form action="/" method="DELETE">
+        <form action="/" method="POST">
         <input type="text" name="deletename" required/>
         <button type="submit">Delete</button>
       </form>
