--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,9 +37,9 @@
       <div>
         <h2>Remove Occasion Info</h2>
         <p>Does nothing if there is no infromation to delete.</p>
-        <form action="/quotes" method="DELETE">
-        <input type="text" name="deletename" required/>
-        <button type="submit">Delete</button>
+        <form action="/" method="DELETE">
+          <input type="text" id="deletename" name="deletename" required/>
+        <button id="delete-button">Delete</button>
       </form>
       </div>
       <div id="message"></div>
