--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
     <p>Enter your occasion info. Example:
       Name, occaison, gift, and date gift provided. </p>
 
-    <form action="/quotes" method="POST">
+    <form action="/occasion" method="POST">
       <input type="text" placeholder="name" name="name" required />
-      <input type="text" placeholder="occasion" name="quote" />
+      <input type="text" placeholder="occasion" name="occasion" />
       <input type="text" placeholder="gift" name="gift" />
       <input type="date" placeholder="date" name="date" />
       <button id="update-button">update</button>
@@ -50,10 +50,10 @@
     <ol class="quotes">
       <% for(var i=0; i < quotes.length; i++) {%>
         <li class="quote">
-          <span><%= quotes[i].name %> </span>:
-          <span><%= quotes[i].occasion %> </span>
-          <span><%= quotes[i].gift %> </span>
-          <span><%= quotes[i].date %> </span>
+          <span><%= quotes[i].name %></span>:
+          <span><%= quotes[i].occasion %></span>
+          <span><%= quotes[i].gift %></span>
+          <span><%= quotes[i].date %></span>
         </li>
         <% } %>
     </ol>
